@@ -11,10 +11,11 @@ allprojects {
     apply plugin: 'jacoco'
 
     jacoco {
-        toolVersion '0.7.9'
+        toolVersion '0.8.3'
     }
     tasks.withType(Test) {
         jacoco.includeNoLocationClasses = true
+        jacoco.excludes = ['jdk.internal.*']
     }
 
     //noinspection GroovyAssignabilityCheck
@@ -45,6 +46,7 @@ subprojects {
 
             buildConfigField 'int', "MIN_SDK_VERSION", "${ext.minSdkVersion}"
             buildConfigField 'int', "TARGET_SDK_VERSION", "${ext.targetSdkVersion}"
+            buildConfigField 'String', 'VERSION_NAME', "\"${ext.versionName}\""
         }
 
         buildTypes {
@@ -61,7 +63,7 @@ subprojects {
         testOptions {
             unitTests {
                 all {
-                    jvmArgs '-noverify'
+                    jvmArgs '-noverify', '-Djdk.attach.allowAttachSelf=true', '-Djdk.module.illegalAccess.silent=true'
                 }
                 returnDefaultValues = true
             }
@@ -86,17 +88,18 @@ subprojects {
             }
         }
 
-        testImplementation 'org.powermock:powermock-api-mockito:1.6.5'
-        testImplementation 'org.powermock:powermock-module-junit4:1.6.5'
-        testImplementation 'org.powermock:powermock-module-junit4-rule-agent:1.6.5'
+        testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
+        testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
+        testImplementation 'org.powermock:powermock-module-junit4-rule-agent:2.0.9'
+        testImplementation 'org.powermock:powermock-classloading-xstream:2.0.9'
         testImplementation "androidx.annotation:annotation:${ext.annotationVersion}"
         testImplementation project(':test')
 
         androidTestImplementation 'com.crittercism.dexmaker:dexmaker-dx:1.4'
         androidTestImplementation 'com.crittercism.dexmaker:dexmaker-mockito:1.4'
-        androidTestImplementation 'androidx.test:core:1.2.0'
-        androidTestImplementation 'androidx.test:rules:1.2.0'
-        androidTestImplementation 'androidx.test:runner:1.3.0'
+        androidTestImplementation 'androidx.test:core:1.4.0'
+        androidTestImplementation 'androidx.test:rules:1.4.0'
+        androidTestImplementation 'androidx.test:runner:1.4.0'
         androidTestImplementation ("androidx.annotation:annotation:${ext.annotationVersion}") {
             force = true
         }
@@ -105,8 +108,8 @@ subprojects {
 
     task coverageReport(type: JacocoReport, dependsOn: ['createDebugCoverageReport', 'testDebugUnitTest']) {
         reports {
-            xml.enabled = true
-            html.enabled = true
+            xml.required = true
+            html.required = true
         }
 
         def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*', '**/*Test*.*', 'android/**/*.*']
@@ -143,6 +146,7 @@ subprojects {
             classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
             android.libraryVariants.all { variant ->
                 if (variant.name == 'release') {
+                    // FIXME: API 'variant.getJavaCompile()' is obsolete and has been replaced with 'variant.getJavaCompileProvider()'.
                     owner.classpath += variant.javaCompile.classpath
                 }
             }
@@ -222,8 +226,8 @@ subprojects {
 // :sdk:coverageReport which combines all coverageReports generated by sub projects
 task coverageReport(type: JacocoReport, dependsOn: subprojects.coverageReport) {
     reports {
-        xml.enabled = true
-        html.enabled = true
+        xml.required = true
+        html.required = true
     }
 
     def coverageReports = subprojects.coverageReport
